# deep_clash_royal

./: .gitignore  adb_sc.py  config.py  read_by_vysor.py  run_agent.py  run_brain.py  run_ddpg.py  run_devices.py  run_guest.py  run_host.py  run_ppo.py  run_ppo2.py  run_tf.py  run_torch.py  test_agent.py  train_memory.py  train_memory_brain2.py  train_memory_ddpg.py  train_torch.py
asset/: card_net.pb  num_net.pb
brain/: base_brain.py  base_brain2.py  ddpg.py  ddpg2.py  ddpg_torch.py  dqn.py  memory.py  policy.py  ppo_tf.py  ppo_torch.py
card_net/: card_main.py  config.py  frozen.py  train_net.py
card_net/dataset/: data_provider.py  read_data.py  scan_data.py
card_net/net/: base_net.py  card_net.py
data/torch_data/: clash_royal.py
device/: device.py  emulator.py  mobile.py
env/: .gitignore  CMakeLists.txt  agent.cpp  agent.h  main.cpp  main2.cpp  main3.cpp  op_c.cpp
env/asset/: card_net.pb
env/detect/: button_detect.cpp  button_detect.h  detect.cpp  detect.h  finish_detect.cpp  finish_detect.h  menu_detect.cpp  menu_detect.h  running_detect.cpp  running_detect.h  start_detect.cpp  start_detect.h
env/dnn/: card_detect.cpp  card_detect.h  elixir_detect.cpp  elixir_detect.h  hp_detect.cpp  hp_detect.h
game/: agent.py  clash_royal.py  clash_royal_env.py  game_env.py  game_record.py  parse_result.py
net/: base_net.py  ddpg_torch.py  mobilenet_v2.py  model.py  ops.py  resnet_tf.py  resnet_torch.py  tf_model.py  torch_model.py
scan/: check_red.py  find_finish.py  grid_battle_field.py  multi_process.py  scan_card.py  scan_card_by_emulator.py  scan_hp.py  scan_num.py  scan_sample.py  scan_window.py  test_c.py  transfer_state.py
utils/: c_lib_utils.py  cmd_utils.py  func_call.py  img_utils.py  logger_utils.py  tf_util.py  torch_util.py
